contact form spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,9 +77,9 @@ h2 {
 
 /* Contact Page Elements */
 form {
-    width: 100%; 
+    width: 95%; 
     margin-bottom: 16px; /* Bottom margin */
-    margin-right: 50px;
+    padding-left: 8px; 
   }
 
   input[type=submit] {
@@ -89,7 +89,7 @@ form {
     border: 1px solid #dddddd;
     border-radius: 4px;
     cursor: pointer;
-  }
+    }
 
   #text {
       width: 100%;
@@ -115,6 +115,12 @@ form {
     margin-bottom: 8px;
 }
 
+/*
+How do I change the color of the font inside the contact form? 
+input [placholder=example@gmail.com] {
+    color: green;
+}
+*/ 
 
 
 /* Portfolio Page Elements */
